<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/title" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sample_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/title2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btnselectfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnfile" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/filetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btntxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btnantex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analizar_datos" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sample_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/title3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btnfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectimage" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btnimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviarimage" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp" />

            <Button
                android:id="@+id/btnanim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analizar_datos" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>